@@ -1,3 +1,11 @@
+2022-10-22T08:07:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3302540357 # 543
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 76 89 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 77 90 / 78 91
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-10-05] / [2022-10-22]
+
 2022-10-17T16:16:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266804355 # 529
 * notice: last 14d: unq all: 1 1
